partial implementation of night mode.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id="night-mode">☽</p> <!--☼☽-->
+  <div id="night-mode">
+      <button>☽</button> <!--☼☽-->
+  </div>
   <div id="timer">
     <h1 id="title">POMODORO</h1>
     
