--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="time">
-      <p>25:00</p>
+      <p id="clock">25:00</p>
     </div>
     <div id="time-buttons">
       <p>▶</p>
@@ -36,6 +36,6 @@
 
 
   
-  <script src="main.js"></script>   
+  <script src="main.js"></script>
 </body>
 </html>
